--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   "dependencies": {
     "cors": "^2.8.5",
     "express": "^4.19.2",
+    "matter-js": "^0.20.0",
     "socket.io": "^4.7.5",
     "ws": "^8.18.0"
   },
