--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "cors": "^2.8.5",
     "express": "^4.19.2",
     "matter-js": "^0.20.0",
+    "redis": "^4.7.0",
     "socket.io": "^4.7.5",
     "ws": "^8.18.0"
   },
