--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "cors": "^2.8.5",
     "dotenv": "^16.4.5",
     "express": "^4.19.2",
+    "fs": "^0.0.1-security",
     "matter-js": "^0.20.0",
     "redis": "^4.7.0",
     "socket.io": "^4.7.5",
