--- a/fly.toml
+++ b/fly.toml
@@ -3,7 +3,7 @@
 # See https://fly.io/docs/reference/configuration/ for information about how to use this file.
 #
 
-app = 'tagginggame-backend-simple'
+app = 'tagginggame-backend'
 primary_region = 'sin'
 
 [build]
@@ -20,3 +20,7 @@ primary_region = 'sin'
   memory = '1gb'
   cpu_kind = 'shared'
   cpus = 1
+
+[env]
+  NODE_ENV = "production"
+  PORT = "3000"
